# claude-compose

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  discovery.rs  format.rs  main.rs  parser.rs  ps.rs  tmux.rs  watcher.rs
src/parser/: log.rs  mod.rs  session.rs  team.rs
src/parser/log/: blocks.rs  meta.rs  mod.rs  tags.rs  tools.rs  types.rs
